--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -1,33 +1,52 @@
-body
- 
-    
+/* GENERAL */
+  
+*
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
+
+/* HEADER */
+
+
 header
     background-color: #5D191B
-    width: 100%
-
-#navbar
-    list-style-type: none
-    margin-top: 42px
-    background-color: #212529
-    position: fixed
-    width: 100%
-
-#navbar li 
-    float: left
-
-#navbar li a 
-    display: block
-    color: white
-    text-align: center
-    padding: 20px 40px
-    text-decoration: none
-    width: 130px
-
-
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    height: 108px
 
 #logo
-    width: 20%
-    justify-content: flex-end
+    padding: 2%
 
-#logo img
-    width: 100%
+#banner1
+    padding: 2%
+
+
+/* NAVIGATION BAR */
+
+
+nav ul
+    
+    margin: 0px
+    margin-bottom: 10px
+    background-color: black
+    height: 27px
+    display: flex
+    flex-direction: row
+    align-items: center
+    padding-bottom: 5px
+    padding-left: 22px
+
+nav ul li 
+    list-style-type: none
+    display: inline
+    
+
+nav ul li a 
+    color: white
+    font-size: 22px
+    text-decoration: none
+    padding-right: 17px
+
+
+
