--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@ header {
 /* NAVIGATION BAR */
 nav ul {
   margin: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   background-color: black;
   height: 27px;
   display: flex;
@@ -38,5 +38,34 @@ nav ul li a {
   font-size: 22px;
   text-decoration: none;
   padding-right: 17px; }
+
+/* MAIN SECTION */
+main {
+  margin-left: 21px;
+  margin-right: 21px; }
+
+#date {
+  display: flex;
+  justify-content: flex-end; }
+
+#date p {
+  margin: 0px; }
+
+#topnews {
+  background-color: #DDDDDD;
+  height: 17px;
+  margin-top: 11px;
+  padding-top: 4px;
+  padding-bottom: 6px; }
+
+#topnews p {
+  margin: 0px;
+  padding-left: 9px;
+  font-size: 24px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  display: flex;
+  align-content: center;
+  margin-top: -10px; }
 
 /*# sourceMappingURL=stylesheet.css.map */
