index page finished

--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -37,16 +37,15 @@ nav ul
     padding-bottom: 5px
     padding-left: 22px
 
-nav ul li 
-    list-style-type: none
-    display: inline
+    li 
+        list-style-type: none
+        display: inline
     
-
-nav ul li a 
-    color: white
-    font-size: 22px
-    text-decoration: none
-    padding-right: 17px
+        a
+            color: white
+            font-size: 22px
+            text-decoration: none
+            padding-right: 17px
 
 
 /* MAIN SECTION */
@@ -56,6 +55,7 @@ main
     margin-left: 21px
     margin-right: 21px
 
+/* Date */
 
 #date
     display: flex
@@ -64,6 +64,12 @@ main
 
 #date p 
     margin: 0px
+
+/* Top news banner */
+
+#row1
+    display: flex
+    justify-content: space-between
 
 #topnews
     background-color: #DDDDDD
@@ -83,4 +89,139 @@ main
     align-content: center
     margin-top: -10px
 
-    
+/* Articles */
+
+.articlerow
+    display: flex
+    justify-content: space-between
+    margin-top: 11px
+    width: 84%
+
+    article
+        width: 31.5%
+        background-color: #171717
+
+        img
+            width: 100%
+            height: 70%
+            object-fit: cover
+            
+
+        p 
+            color: white
+            padding-left: 5%
+            padding-right: 5%
+            font-size: 24px
+            
+        
+        a
+            text-decoration: none
+
+/* Side banner */
+
+.sidebanner 
+    float: right
+    margin-left: 9px
+    width: 14%
+    margin-top: 11px
+
+
+    a img 
+        width: 100%
+        height: 100%
+        object-fit: cover
+
+#popular
+    background-color: #DDDDDD
+    height: 17px
+    width: 84%
+    margin-top: 11px
+    padding-top: 4px
+    padding-bottom: 6px
+   
+
+    p 
+        margin: 0px
+        padding-left: 9px
+        font-size: 24px
+        padding-top: 0px
+        padding-bottom: 0px
+        display: flex
+        align-content: center
+        margin-top: -10px
+
+#sidebanner2
+    margin-top: 0px
+
+/* Banner 3 */
+
+#banner3
+    width: 100%
+    display: flex
+    justify-content: center
+    margin-top: 17px
+    margin-bottom: 16px
+
+
+/* Article 2 */
+
+
+#article2
+    width: 47%
+    width: 100%
+    display: flex
+    justify-content: space-between
+    margin: 0px 0px 20px 10px
+
+
+.row
+    width: 84%
+    display: flex
+    justify-content: space-between
+
+    article
+        width: 48%
+        background-color: #171717
+
+        img
+            width: 100%
+            object-fit: cover
+        
+        p 
+            color: white
+            padding-left: 5%
+            padding-right: 5%
+            font-size: 25px
+            text-align: center
+
+        a
+            text-decoration: none
+            
+
+#raw2
+    margin-top: 54px
+    margin-bottom: 150px
+
+/* Footer */
+
+footer
+    background-color: black
+    text-align: center
+    height: 168px
+
+    P
+        font-size: 13px
+        font-weight: 500
+
+#footernavbar a
+    font-size: 15px  
+
+
+#logobottom
+    float: right
+    margin-right: 22px
+    margin-top: 30px
+
+#copyright
+    color: white
+    margin-top: 100px
