--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,28 +28,32 @@ nav ul {
   align-items: center;
   padding-bottom: 5px;
   padding-left: 22px; }
-
-nav ul li {
-  list-style-type: none;
-  display: inline; }
-
-nav ul li a {
-  color: white;
-  font-size: 22px;
-  text-decoration: none;
-  padding-right: 17px; }
+  nav ul li {
+    list-style-type: none;
+    display: inline; }
+    nav ul li a {
+      color: white;
+      font-size: 22px;
+      text-decoration: none;
+      padding-right: 17px; }
 
 /* MAIN SECTION */
 main {
   margin-left: 21px;
   margin-right: 21px; }
 
+/* Date */
 #date {
   display: flex;
   justify-content: flex-end; }
 
 #date p {
   margin: 0px; }
+
+/* Top news banner */
+#row1 {
+  display: flex;
+  justify-content: space-between; }
 
 #topnews {
   background-color: #DDDDDD;
@@ -67,5 +71,117 @@ main {
   display: flex;
   align-content: center;
   margin-top: -10px; }
+
+/* Articles */
+.articlerow {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 11px;
+  width: 84%; }
+  .articlerow article {
+    width: 31.5%;
+    background-color: #171717; }
+    .articlerow article img {
+      width: 100%;
+      height: 70%;
+      object-fit: cover; }
+    .articlerow article p {
+      color: white;
+      padding-left: 5%;
+      padding-right: 5%;
+      font-size: 24px; }
+    .articlerow article a {
+      text-decoration: none; }
+
+/* Side banner */
+.sidebanner {
+  float: right;
+  margin-left: 9px;
+  width: 14%;
+  margin-top: 11px; }
+  .sidebanner a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
+#popular {
+  background-color: #DDDDDD;
+  height: 17px;
+  width: 84%;
+  margin-top: 11px;
+  padding-top: 4px;
+  padding-bottom: 6px; }
+  #popular p {
+    margin: 0px;
+    padding-left: 9px;
+    font-size: 24px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    display: flex;
+    align-content: center;
+    margin-top: -10px; }
+
+#sidebanner2 {
+  margin-top: 0px; }
+
+/* Banner 3 */
+#banner3 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 17px;
+  margin-bottom: 16px; }
+
+/* Article 2 */
+#article2 {
+  width: 47%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 0px 20px 10px; }
+
+.row {
+  width: 84%;
+  display: flex;
+  justify-content: space-between; }
+  .row article {
+    width: 48%;
+    background-color: #171717; }
+    .row article img {
+      width: 100%;
+      object-fit: cover; }
+    .row article p {
+      color: white;
+      padding-left: 5%;
+      padding-right: 5%;
+      font-size: 25px;
+      text-align: center; }
+    .row article a {
+      text-decoration: none; }
+
+#raw2 {
+  margin-top: 54px;
+  margin-bottom: 150px; }
+
+/* Footer */
+footer {
+  background-color: black;
+  text-align: center;
+  height: 168px; }
+  footer P {
+    font-size: 13px;
+    font-weight: 500; }
+
+#footernavbar a {
+  font-size: 15px; }
+
+#logobottom {
+  float: right;
+  margin-right: 22px;
+  margin-top: 30px; }
+
+#copyright {
+  color: white;
+  margin-top: 100px; }
 
 /*# sourceMappingURL=stylesheet.css.map */
