--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,10 @@
-/* GENERAL */
-* {
+body {
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
 
-/* HEADER */
+/* Header */
 header {
   background-color: #5D191B;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   height: 108px; }
 
 #logo {
@@ -17,101 +13,34 @@ header {
 #banner1 {
   padding: 2%; }
 
-/* NAVIGATION BAR */
+/* Navbar */
 nav ul {
-  margin: 0px;
-  margin-bottom: 4px;
   background-color: black;
-  height: 27px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding-bottom: 5px;
-  padding-left: 22px; }
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 0px; }
   nav ul li {
     list-style-type: none;
     display: inline; }
-    nav ul li a {
-      color: white;
-      font-size: 22px;
-      text-decoration: none;
-      padding-right: 17px; }
+  nav ul a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    padding-left: 1%; }
 
-/* MAIN SECTION */
+/* Main */
 main {
-  margin-left: 21px;
-  margin-right: 21px; }
-
-/* Date */
-#date {
-  display: flex;
-  justify-content: flex-end; }
-
-#date p {
-  margin: 0px; }
+  margin: 0px 25px; }
 
 /* Top news banner */
-#row1 {
-  display: flex;
-  justify-content: space-between; }
-
 #topnews {
-  background-color: #DDDDDD;
+  background-color: #dddddd;
   height: 17px;
   margin-top: 11px;
+  margin-bottom: 11px;
   padding-top: 4px;
   padding-bottom: 6px; }
-
-#topnews p {
-  margin: 0px;
-  padding-left: 9px;
-  font-size: 24px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  display: flex;
-  align-content: center;
-  margin-top: -10px; }
-
-/* Articles */
-.articlerow {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 11px;
-  width: 84%; }
-  .articlerow article {
-    width: 31.5%;
-    background-color: #171717; }
-    .articlerow article img {
-      width: 100%;
-      height: 70%;
-      object-fit: cover; }
-    .articlerow article p {
-      color: white;
-      padding-left: 5%;
-      padding-right: 5%;
-      font-size: 24px; }
-    .articlerow article a {
-      text-decoration: none; }
-
-/* Side banner */
-.sidebanner {
-  float: right;
-  margin-left: 9px;
-  width: 14%;
-  margin-top: 11px; }
-  .sidebanner a img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; }
-
-#popular {
-  background-color: #DDDDDD;
-  height: 17px;
-  width: 84%;
-  margin-top: 11px;
-  padding-top: 4px;
-  padding-bottom: 6px; }
-  #popular p {
+  #topnews p {
     margin: 0px;
     padding-left: 9px;
     font-size: 24px;
@@ -121,67 +50,156 @@ main {
     align-content: center;
     margin-top: -10px; }
 
-#sidebanner2 {
-  margin-top: 0px; }
-
-/* Banner 3 */
-#banner3 {
-  width: 100%;
+/* Article Divs */
+div {
   display: flex;
-  justify-content: center;
-  margin-top: 17px;
-  margin-bottom: 16px; }
-
-/* Article 2 */
-#article2 {
-  width: 47%;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin: 0px 0px 20px 10px; }
-
-.row {
-  width: 84%;
-  display: flex;
+  flex-flow: row wrap;
   justify-content: space-between; }
-  .row article {
-    width: 48%;
-    background-color: #171717; }
-    .row article img {
-      width: 100%;
-      object-fit: cover; }
-    .row article p {
-      color: white;
-      padding-left: 5%;
-      padding-right: 5%;
-      font-size: 25px;
-      text-align: center; }
-    .row article a {
-      text-decoration: none; }
 
-#raw2 {
-  margin-top: 54px;
-  margin-bottom: 150px; }
+/* Article */
+article {
+  background-color: black;
+  padding-bottom: 1.5%;
+  margin-bottom: 3.5%;
+  height: auto;
+  width: 47%; }
+  article img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover; }
+  article p {
+    margin: 0;
+    padding-left: 1.5%;
+    color: white;
+    font-size: 3vw; }
+  article a {
+    text-decoration: none; }
+
+/* Mobile Banner */
+#fswdmobile {
+  padding-bottom: 0; }
+  #fswdmobile img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 /* Footer */
 footer {
   background-color: black;
   text-align: center;
-  height: 168px; }
-  footer P {
-    font-size: 13px;
-    font-weight: 500; }
+  padding: 2%; }
 
-#footernavbar a {
+#navbottom a {
   font-size: 15px; }
 
 #logobottom {
-  float: right;
-  margin-right: 22px;
-  margin-top: 30px; }
+  float: right; }
 
-#copyright {
+#footertext {
   color: white;
-  margin-top: 100px; }
+  margin: 0;
+  padding: 20px; }
+
+/* Media Queries */
+#date {
+  display: none; }
+
+.sidebanner {
+  display: none; }
+
+#banner3 {
+  display: none; }
+
+/* For tablets - bigger than 480px */
+@media screen and (min-width: 480px) {
+  #fswdmobile {
+    display: none; }
+
+  #date {
+    display: block;
+    padding: 1%;
+    text-align: right; }
+
+  nav ul {
+    text-align: left; }
+
+  article {
+    width: 32%; }
+    article p {
+      font-size: 2.1vw; }
+
+  #banner3 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4%; }
+    #banner3 img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; } }
+/* For Desktops - bigger than 1024px */
+@media screen and (min-width: 1024px) {
+  #fswdmobile {
+    display: none; }
+
+  #banner1 {
+    display: block; }
+
+  .sidebanner {
+    display: block; }
+
+  #banner3 {
+    display: block; }
+
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+
+  #date {
+    display: block;
+    padding: 1%;
+    text-align: right; }
+
+  nav ul {
+    text-align: left;
+    height: 27px; }
+
+  article {
+    width: 32%; }
+    article p {
+      font-size: 2.1vw; }
+
+  .articlebox {
+    width: 47%; }
+
+  .sidebanner {
+    float: right;
+    margin-left: 2%;
+    width: 15vw; }
+    .sidebanner a img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+
+  #FSWDdesktop {
+    height: 59vw; }
+
+  #CFdesktop {
+    position: relative;
+    bottom: 68vw;
+    right: 0px;
+    height: 64vw; }
+
+  #banner3 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4%; }
+    #banner3 img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; } }
 
 /*# sourceMappingURL=stylesheet.css.map */
