--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -1,227 +1,243 @@
-/* GENERAL */
-  
-*
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
+body
+	margin: 0
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
-/* HEADER */
-
+/* Header */
 
 header
-    background-color: #5D191B
-    display: flex
-    flex-direction: row
-    justify-content: space-between
-    align-items: center
-    height: 108px
+	background-color: #5D191B
+	height: 108px
+
+
 
 #logo
-    padding: 2%
+	padding: 2%
 
 #banner1
-    padding: 2%
+	padding: 2%
+
+/* Navbar */
+
+nav
+	ul
+		background-color: black
+		text-align: center
+		margin-bottom: 10px
+		margin-top: 0px
+
+		li
+			list-style-type: none
+			display: inline
+		a
+			color: white
+			font-size: 20px
+			text-decoration: none
+			padding-left: 1%
 
 
-/* NAVIGATION BAR */
+/* Main */
 
 
-nav ul
-    
-    margin: 0px
-    margin-bottom: 4px
-    background-color: black
-    height: 27px
-    display: flex
-    flex-direction: row
-    align-items: center
-    padding-bottom: 5px
-    padding-left: 22px
-
-    li 
-        list-style-type: none
-        display: inline
-    
-        a
-            color: white
-            font-size: 22px
-            text-decoration: none
-            padding-right: 17px
-
-
-/* MAIN SECTION */
-
-
-main 
-    margin-left: 21px
-    margin-right: 21px
-
-/* Date */
-
-#date
-    display: flex
-    justify-content: flex-end
-    
-
-#date p 
-    margin: 0px
+main
+	margin: 0px 25px
 
 /* Top news banner */
 
-#row1
-    display: flex
-    justify-content: space-between
-
 #topnews
-    background-color: #DDDDDD
-    height: 17px
-    margin-top: 11px
-    padding-top: 4px
-    padding-bottom: 6px
-   
-
-#topnews p 
-    margin: 0px
-    padding-left: 9px
-    font-size: 24px
-    padding-top: 0px
-    padding-bottom: 0px
-    display: flex
-    align-content: center
-    margin-top: -10px
-
-/* Articles */
-
-.articlerow
-    display: flex
-    justify-content: space-between
-    margin-top: 11px
-    width: 84%
-
-    article
-        width: 31.5%
-        background-color: #171717
-
-        img
-            width: 100%
-            height: 70%
-            object-fit: cover
-            
-
-        p 
-            color: white
-            padding-left: 5%
-            padding-right: 5%
-            font-size: 24px
-            
-        
-        a
-            text-decoration: none
-
-/* Side banner */
-
-.sidebanner 
-    float: right
-    margin-left: 9px
-    width: 14%
-    margin-top: 11px
+	background-color: #dddddd
+	height: 17px
+	margin-top: 11px
+	margin-bottom: 11px
+	padding-top: 4px
+	padding-bottom: 6px
+	p 
+		margin: 0px
+		padding-left: 9px
+		font-size: 24px
+		padding-top: 0px
+		padding-bottom: 0px
+		display: flex
+		align-content: center
+		margin-top: -10px
 
 
-    a img 
-        width: 100%
-        height: 100%
-        object-fit: cover
 
-#popular
-    background-color: #DDDDDD
-    height: 17px
-    width: 84%
-    margin-top: 11px
-    padding-top: 4px
-    padding-bottom: 6px
-   
+/* Article Divs */
 
-    p 
-        margin: 0px
-        padding-left: 9px
-        font-size: 24px
-        padding-top: 0px
-        padding-bottom: 0px
-        display: flex
-        align-content: center
-        margin-top: -10px
+div
+	display: flex
+	flex-flow: row wrap
+	justify-content: space-between
+/* Article */
 
-#sidebanner2
-    margin-top: 0px
+article
+	background-color: black
+	padding-bottom: 1.5%
+	margin-bottom: 3.5%
+	height: auto
+	width: 47%
+	img
+		width: 100%
+		height: 70%
+		object-fit: cover
+	p
+		margin: 0
+		padding-left: 1.5%
+		color: white
+		font-size: 3vw
+	a
+		text-decoration: none
 
-/* Banner 3 */
+/* Mobile Banner */
 
-#banner3
-    width: 100%
-    display: flex
-    justify-content: center
-    margin-top: 17px
-    margin-bottom: 16px
+#fswdmobile
+	padding-bottom: 0
+	img
+		width: 100%
+		height: 100%
+		object-fit: cover
 
-
-/* Article 2 */
-
-
-#article2
-    width: 47%
-    width: 100%
-    display: flex
-    justify-content: space-between
-    margin: 0px 0px 20px 10px
-
-
-.row
-    width: 84%
-    display: flex
-    justify-content: space-between
-
-    article
-        width: 48%
-        background-color: #171717
-
-        img
-            width: 100%
-            object-fit: cover
-        
-        p 
-            color: white
-            padding-left: 5%
-            padding-right: 5%
-            font-size: 25px
-            text-align: center
-
-        a
-            text-decoration: none
-            
-
-#raw2
-    margin-top: 54px
-    margin-bottom: 150px
-
+		
 /* Footer */
 
 footer
-    background-color: black
-    text-align: center
-    height: 168px
+	background-color: black
+	text-align: center
+	padding: 2%
 
-    P
-        font-size: 13px
-        font-weight: 500
-
-#footernavbar a
-    font-size: 15px  
-
-
+#navbottom
+	a
+		font-size: 15px
+	
 #logobottom
-    float: right
-    margin-right: 22px
-    margin-top: 30px
+	float: right
+		
 
-#copyright
-    color: white
-    margin-top: 100px
+#footertext
+	color: white
+	margin: 0
+	padding: 20px
+
+/* Media Queries */
+
+#date
+	display: none
+
+.sidebanner
+	display: none
+
+#banner3
+	display: none
+
+
+/* For tablets - bigger than 480px*/
+
+
+@media screen and (min-width: 480px)
+
+
+	#fswdmobile
+		display: none
+	
+	#date
+		display: block
+		padding: 1%
+		text-align: right
+	
+	nav
+		ul
+			text-align: left
+
+	article
+		width: 32%
+		p
+			font-size: 2.1vw
+
+	#banner3
+		width: 100%
+		display: flex
+		justify-content: center
+		margin-bottom: 4%
+		a
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
+
+
+/* For Desktops - bigger than 1024px */
+
+
+@media screen and (min-width: 1024px)
+	
+	
+	#fswdmobile
+		display: none
+
+
+	#banner1
+		display: block
+
+	.sidebanner
+		display: block
+
+	#banner3
+		display: block
+	
+	header
+		display: flex
+		flex-direction: row
+		justify-content: space-between
+		align-items: center
+	
+	#date
+		display: block
+		padding: 1%
+		text-align: right
+
+	nav
+		ul
+			text-align: left
+			height: 27px
+
+	article
+		width: 32%
+		p
+			font-size: 2.1vw
+	
+	.articlebox
+		width: 47%
+
+	.sidebanner
+		float: right
+		margin-left: 2%
+		width: 15vw
+
+		a
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+ 
+	#FSWDdesktop
+		height: 59vw
+
+	#CFdesktop
+		position: relative
+		bottom: 68vw
+		right: 0px
+		height: 64vw
+	
+	#banner3
+		width: 100%
+		display: flex
+		justify-content: center
+		margin-bottom: 4%
+
+		a
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
+
