--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -1,3 +1,5 @@
+html 
+	width: auto
 
 body
 	margin: 0
@@ -120,6 +122,9 @@ footer
 	padding: 20px
 
 /* Media Queries */
+
+#banner1
+	display: none
 
 #date
 	display: none
