--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+html {
+  width: auto; }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
@@ -101,6 +104,9 @@ footer {
   padding: 20px; }
 
 /* Media Queries */
+#banner1 {
+  display: none; }
+
 #date {
   display: none; }
 
